--- a/styles/css/wedding.css
+++ b/styles/css/wedding.css
@@ -11,15 +11,32 @@ h2 {
   margin: 5px; }
 
 h3 {
-  font-size: 22px;
-  margin: 10px;
-  font-style: italic; }
+  font-size: 36px;
+  font-weight: 600;
+  margin: 22px;
+  letter-spacing: 4px;
+  color: #616161;
+  font-family: sverigedecorated; }
+
+h4 {
+  font-size: 20px;
+  margin: 4px;
+  color: #949494; }
 
 a {
   text-decoration: none; }
+  a:visited {
+    color: inherit; }
+
+.link {
+  text-decoration: underline; }
 
 ul, li {
   list-style: none; }
+
+.superscript {
+  vertical-align: super;
+  font-size: 12px; }
 
 p {
   margin: 5px 0;
@@ -31,17 +48,33 @@ p {
 @font-face {
   font-family: sverigedecorated;
   src: url("../fonts/SverigeScriptDecorated_Demo.ttf"); }
+.align-center {
+  text-align: center; }
+
 .bold {
   font-weight: bold; }
 
 .italic {
   font-weight: italic; }
 
+button {
+  margin: 20px 0;
+  padding: 15px 25px;
+  border: 0;
+  font-size: 20px;
+  background: linear-gradient(to bottom, #949494, #757575);
+  color: #fff;
+  border: 1px solid #9e9e9e;
+  border-radius: 8px; }
+  button:hover {
+    background: linear-gradient(to bottom, rgba(148, 148, 148, 0.8), rgba(117, 117, 117, 0.8));
+    cursor: pointer; }
+
 body {
-  background: #a3bfb9; }
+  background: url("../images/background.jpg"); }
 
 #header {
-  background-color: #9E9E9E;
+  background: linear-gradient(to bottom, #afafaf, #949494);
   color: #fff;
   box-shadow: 0 1px 5px 1px #757575;
   padding: 10px 0;
@@ -52,13 +85,13 @@ body {
   width: 300px;
   height: 180px;
   position: absolute;
-  background-color: #9E9E9E;
+  background: linear-gradient(to bottom, #949494 30%, rgba(128, 127, 127, 0.7));
   left: 50%;
   top: 60px;
   margin-left: -150px;
   border-bottom-right-radius: 200px;
   border-bottom-left-radius: 200px;
-  box-shadow: 0 5px 11px 0px #757575;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
   z-index: 2; }
 
 #bottom-name {
@@ -75,7 +108,12 @@ body {
     -webkit-flex: 1;
     text-align: center; }
     #top-nav li a {
-      color: white; }
+      color: #f5f5f5;
+      transition: all .5s;
+      -webkit-transition: all .5s; }
+      #top-nav li a:hover {
+        color: #fff;
+        text-shadow: 0 0 1px #fff; }
 
 #page-wrapper {
   width: 80%;
@@ -83,25 +121,29 @@ body {
   box-shadow: 0 0 10px 2px #757575; }
 
 #page-content {
-  background: #fff;
   margin: 0 0 20px 0; }
 
 #main-image {
   width: 100%; }
 
 .section {
-  position: relative; }
+  position: relative;
+  background-color: #fff;
+  font-size: 0;
+  border-bottom: 3px solid #7282a7; }
   .section img.section-image {
     width: 100%; }
 
 .section-title {
   font-size: 150px;
   font-family: mademoisellecamille;
+  text-shadow: 1px 1px #000;
   text-align: center;
   display: block; }
 
 .section-title-alt {
   padding: 40px 0 20px 0;
+  color: #616161;
   font-size: 50px;
   font-family: sverigedecorated;
   text-align: center;
@@ -109,41 +151,88 @@ body {
 
 .section-container {
   position: absolute;
-  padding: 0 20px 20px 20px;
+  padding: 0 40px 20px 40px;
   z-index: 2;
-  box-shadow: 0px 1px 6px 1px #757575; }
+  box-shadow: 0px 1px 6px 1px #757575;
+  font-size: 16px; }
 
 #story-text-container {
-  width: 60%;
-  top: 5%;
+  width: 30%;
+  top: 26%;
   color: #fff;
-  left: 30%;
+  right: 10%;
   z-index: 2;
-  opacity: .88;
-  background-color: #9e9e9e; }
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #BDBDBD, #9E9E9E);
+  border-image-slice: 1;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(158, 158, 158, 0.88);
+  transition: background-color 1s; }
+  #story-text-container:hover {
+    background-color: #9e9e9e; }
 
 #rsvp-text-container {
-  width: 60%;
-  top: 20%;
+  width: 500px;
+  top: 50px;
   color: #fff;
-  left: 20%;
+  left: calc(50% - 250px);
   z-index: 2;
-  opacity: .88;
-  background-color: #8999bd; }
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #505d79, #6c7896);
+  border-image-slice: 1;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(114, 130, 167, 0.89);
+  transition: background-color 1s; }
+  #rsvp-text-container:hover {
+    background-color: #7282a7; }
 
 #engagement-text-container {
-  width: 60%;
-  top: 20%;
-  color: #000;
-  left: 5%;
+  width: 600px;
+  bottom: 200px;
+  height: 375px;
+  color: #fff;
+  left: 200px;
   z-index: 2;
-  opacity: .88;
-  background-color: #f3b23a; }
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #9E9E9E, #BDBDBD);
+  border-image-slice: 1;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(158, 158, 158, 0.8);
+  transition: background-color 1s; }
+  #engagement-text-container:hover {
+    background-color: #9e9e9e; }
 
 #wedding {
-  background: linear-gradient(to bottom, #ffcdd2 75%, #fff);
   text-align: center; }
   #wedding .picture-wrapper {
     text-align: center; }
+
+#wedding-text-container {
+  top: 250px;
+  color: #fff;
+  left: calc(50% - 300px);
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #BDBDBD, #9E9E9E);
+  border-image-slice: 1;
+  z-index: 2;
+  box-shadow: none;
+  background-color: rgba(255, 255, 255, 0.6);
+  transition: background-color 1s; }
+  #wedding-text-container:hover {
+    background-color: white; }
+
+#wedding-section {
+  display: flex;
+  display: -webkit-flex; }
+  #wedding-section div {
+    flex: 1;
+    -webkit-flex: 1; }
+
+#directions {
+  background-color: rgba(158, 158, 158, 0.8); }
 
 /*# sourceMappingURL=wedding.css.map */
