--- a/styles/css/wedding.css
+++ b/styles/css/wedding.css
@@ -11,7 +11,7 @@ h2 {
   margin: 5px; }
 
 h3 {
-  font-size: 36px;
+  font-size: 26px;
   font-weight: 600;
   margin: 22px;
   letter-spacing: 4px;
@@ -231,6 +231,42 @@ body {
   #wedding-section div {
     flex: 1;
     -webkit-flex: 1; }
+
+#bridal-party {
+  diplay: flex;
+  display: -webkit-flex;
+  text-align: center; }
+  #bridal-party > div {
+    flex: 1;
+    -webkit-flex: 1;
+    width: 50%; }
+
+#bridesmaids {
+  background-color: #b3e5fc; }
+
+#groomsmen-women {
+  background-color: #9e9e9e; }
+  #groomsmen-women h3 {
+    color: #fff; }
+  #groomsmen-women .section-title-alt {
+    color: #fff; }
+
+.bridal-party-profile-list {
+  display: flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  justify-content: center;
+  -webkit-justify-content: center; }
+  .bridal-party-profile-list > li {
+    width: 125px;
+    height: 125px;
+    border-radius: 75px;
+    background-color: #fff;
+    margin: 10px; }
+    .bridal-party-profile-list > li:hover {
+      cursor: pointer;
+      opacity: .8; }
 
 #directions {
   background-color: rgba(158, 158, 158, 0.8); }
