--- a/styles/css/wedding.scss
+++ b/styles/css/wedding.scss
@@ -11,7 +11,7 @@ h2{
     margin: 5px;
 }
 h3{
-	font-size: 36px;
+	font-size: 26px;
     font-weight: 600;
     margin: 22px;
     letter-spacing: 4px;
@@ -245,6 +245,47 @@ body{
     div{
         flex:1;
         -webkit-flex:1;
+    }
+}
+#bridal-party{
+    diplay:flex;
+    display:-webkit-flex;
+    text-align:center;
+    >div{
+        flex:1;
+        -webkit-flex:1;
+        width:50%;
+    }
+}
+#bridesmaids{
+    background-color:#b3e5fc;
+}
+#groomsmen-women{
+    h3{
+        color:#fff;
+    }
+    .section-title-alt{
+        color:#fff;
+    }
+    background-color:#9e9e9e;
+}
+.bridal-party-profile-list{
+    display:flex;
+    display:-webkit-flex;
+    flex-wrap: wrap;
+    -webkit-flex-wrap:wrap;
+    justify-content: center;
+    -webkit-justify-content: center;
+    >li{
+        width: 125px;
+        height: 125px;
+        border-radius:75px;
+        background-color:#fff;
+        margin:10px;
+        &:hover{
+            cursor: pointer;
+            opacity:.8;
+        }
     }
 }
 #directions{
