--- a/styles/css/wedding.css
+++ b/styles/css/wedding.css
@@ -1,27 +1,40 @@
 html {
   font-family: 'Myriad Pro','Helvetica','sans-serif';
   font-size: 16px; }
+  @media screen and (max-width: 1366px) {
+    html {
+      font-size: 14px; } }
 
 h1 {
   font-size: 46px;
   font-family: sverigedecorated; }
+  @media screen and (max-width: 1366px) {
+    h1 {
+      font-size: 35px; } }
+  @media screen and (max-width: 1024px) {
+    h1 {
+      font-size: 28px; } }
 
 h2 {
   font-size: 34px;
   margin: 5px; }
+  @media screen and (max-width: 1366px) {
+    h2 {
+      font-size: 26px; } }
+  @media screen and (max-width: 1024px) {
+    h2 {
+      font-size: 22px; } }
 
 h3 {
   font-size: 26px;
   font-weight: 600;
   margin: 22px;
   letter-spacing: 4px;
-  color: #616161;
   font-family: sverigedecorated; }
 
 h4 {
   font-size: 20px;
-  margin: 4px;
-  color: #949494; }
+  margin: 4px; }
 
 a {
   text-decoration: none; }
@@ -29,7 +42,10 @@ a {
     color: inherit; }
 
 .link {
-  text-decoration: underline; }
+  text-decoration: underline;
+  cursor: pointer; }
+  .link:hover {
+    opacity: .5; }
 
 ul, li {
   list-style: none; }
@@ -72,6 +88,68 @@ button {
 
 body {
   background: url("../images/background.jpg"); }
+  body.noscroll {
+    overflow: hidden; }
+
+#modal {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(102, 102, 102, 0.6);
+  display: none; }
+
+#picture-gallery {
+  margin: auto;
+  position: absolute;
+  height: 80%;
+  width: 80%;
+  background: #000;
+  top: 10%;
+  text-align: center;
+  left: 0;
+  right: 0;
+  min-height: 600px; }
+  #picture-gallery img {
+    height: 100%; }
+
+.nav-arrow {
+  position: absolute;
+  top: 50%;
+  margin-top: -25px;
+  color: #fff;
+  font-size: 50px;
+  cursor: pointer; }
+  .nav-arrow:hover {
+    opacity: .6; }
+
+#left-arrow {
+  left: 20px; }
+
+#right-arrow {
+  right: 20px; }
+
+#navigator {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto; }
+  #navigator ul {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center; }
+    #navigator ul li {
+      height: 15px;
+      width: 15px;
+      border-radius: 8px;
+      border: 2px solid white;
+      cursor: pointer;
+      margin: 0 4px 0 4px;
+      background-color: rgba(66, 66, 66, 0.8); }
+      #navigator ul li.filled {
+        background-color: #7282a7; }
 
 #header {
   background: linear-gradient(to bottom, #afafaf, #949494);
@@ -79,46 +157,105 @@ body {
   box-shadow: 0 1px 5px 1px #757575;
   padding: 10px 0;
   position: relative; }
+  @media screen and (max-width: 768px) {
+    #header {
+      padding: 0; } }
 
 #header-text {
   text-align: center;
   width: 300px;
   height: 180px;
-  position: absolute;
   background: linear-gradient(to bottom, #949494 30%, rgba(128, 127, 127, 0.7));
-  left: 50%;
-  top: 60px;
-  margin-left: -150px;
-  border-bottom-right-radius: 200px;
-  border-bottom-left-radius: 200px;
+  position: absolute;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
   z-index: 2; }
+  @media screen and (min-width: 769px) {
+    #header-text {
+      left: 50%;
+      top: 59px;
+      margin-left: -150px;
+      border-bottom-right-radius: 200px;
+      border-bottom-left-radius: 200px; } }
+  @media screen and (max-width: 1366px) {
+    #header-text {
+      width: 250px;
+      height: 150px;
+      margin-left: -125px;
+      top: 58px; } }
+  @media screen and (max-width: 1024px) {
+    #header-text {
+      width: 200px;
+      height: 115px;
+      margin-left: -100px;
+      top: 57px; } }
+  @media screen and (max-width: 768px) {
+    #header-text {
+      width: 100%;
+      margin: 0;
+      left: 0;
+      top: 0;
+      height: auto;
+      background: rgba(128, 127, 127, 0.7); }
+      #header-text h1 {
+        display: inline-block;
+        margin-bottom: 5px; } }
 
 #bottom-name {
   margin-top: 20px; }
 
 #top-nav {
   width: 100%;
-  text-transform: uppercase;
-  display: inline-flex;
-  display: -webkit-inline-flex; }
+  text-transform: uppercase; }
   #top-nav li {
     padding: 12px;
     flex: 1;
     -webkit-flex: 1;
     text-align: center; }
     #top-nav li a {
+      display: block;
       color: #f5f5f5;
       transition: all .5s;
       -webkit-transition: all .5s; }
       #top-nav li a:hover {
         color: #fff;
         text-shadow: 0 0 1px #fff; }
+  #top-nav.scroll {
+    background-color: rgba(66, 66, 66, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    padding: 10px 0 0 10px; }
+  @media screen and (min-width: 769px) {
+    #top-nav {
+      display: inline-flex !important;
+      display: -webkit-inline-flex !important; } }
+  @media screen and (max-width: 768px) {
+    #top-nav {
+      display: none;
+      z-index: 3;
+      position: fixed;
+      top: 0; }
+      #top-nav li {
+        background-color: #9e9e9e;
+        border-bottom: 1px solid #fff;
+        cursor: pointer;
+        padding: 0; }
+        #top-nav li:hover {
+          background-color: #bdbdbd;
+          color: #7282a7; }
+        #top-nav li a {
+          padding: 12px; } }
 
 #page-wrapper {
   width: 80%;
+  min-width: 1536px;
   margin: 0 auto;
   box-shadow: 0 0 10px 2px #757575; }
+  @media screen and (max-width: 1366px) {
+    #page-wrapper {
+      width: 100%;
+      min-width: 600px; } }
 
 #page-content {
   margin: 0 0 20px 0; }
@@ -128,7 +265,6 @@ body {
 
 .section {
   position: relative;
-  background-color: #fff;
   font-size: 0;
   border-bottom: 3px solid #7282a7; }
   .section img.section-image {
@@ -140,11 +276,18 @@ body {
   text-shadow: 1px 1px #000;
   text-align: center;
   display: block; }
+  @media screen and (max-width: 1366px) {
+    .section-title {
+      font-size: 125px; } }
+  @media screen and (max-width: 1024px) {
+    .section-title {
+      font-size: 75px;
+      margin: -10px 0 -15px; } }
 
 .section-title-alt {
-  padding: 40px 0 20px 0;
-  color: #616161;
-  font-size: 50px;
+  padding: 30px 0 15px 0;
+  color: #000;
+  font-size: 45px;
   font-family: sverigedecorated;
   text-align: center;
   display: block; }
@@ -154,7 +297,19 @@ body {
   padding: 0 40px 20px 40px;
   z-index: 2;
   box-shadow: 0px 1px 6px 1px #757575;
-  font-size: 16px; }
+  font-size: 16px;
+  text-align: justify; }
+  @media screen and (max-width: 1024px) {
+    .section-container {
+      font-size: 14px;
+      padding: 0 20px 10px 20px; } }
+  @media screen and (max-width: 768px) {
+    .section-container {
+      left: 0 !important;
+      top: 0 !important;
+      bottom: auto !important;
+      width: 100% !important;
+      margin-left: 0 !important; } }
 
 #story-text-container {
   width: 30%;
@@ -169,8 +324,14 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(158, 158, 158, 0.88);
   transition: background-color 1s; }
-  #story-text-container:hover {
-    background-color: #9e9e9e; }
+  @media screen and (min-width: 1025px) {
+    #story-text-container:hover {
+      background-color: #9e9e9e; } }
+  @media screen and (max-width: 1024px) {
+    #story-text-container {
+      top: 20px;
+      right: 2%;
+      width: 40%; } }
 
 #rsvp-text-container {
   width: 500px;
@@ -184,14 +345,15 @@ body {
   border-image-slice: 1;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(114, 130, 167, 0.89);
-  transition: background-color 1s; }
-  #rsvp-text-container:hover {
-    background-color: #7282a7; }
+  transition: background-color 1s;
+  text-align: center; }
+  @media screen and (min-width: 1025px) {
+    #rsvp-text-container:hover {
+      background-color: #7282a7; } }
 
 #engagement-text-container {
   width: 600px;
   bottom: 200px;
-  height: 375px;
   color: #fff;
   left: 200px;
   z-index: 2;
@@ -202,18 +364,32 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(158, 158, 158, 0.8);
   transition: background-color 1s; }
-  #engagement-text-container:hover {
-    background-color: #9e9e9e; }
+  @media screen and (min-width: 1025px) {
+    #engagement-text-container:hover {
+      background-color: #9e9e9e; } }
+  @media screen and (max-width: 1024px) {
+    #engagement-text-container {
+      left: 50%;
+      margin-left: -300px; } }
 
 #wedding {
-  text-align: center; }
+  text-align: center;
+  background-image: url("../images/wedding.jpg");
+  background-size: cover;
+  min-height: 900px; }
   #wedding .picture-wrapper {
     text-align: center; }
+  @media screen and (max-width: 768px) {
+    #wedding {
+      min-height: 562px; } }
 
 #wedding-text-container {
-  top: 250px;
-  color: #fff;
-  left: calc(50% - 300px);
+  top: 10%;
+  color: #000;
+  left: 0;
+  margin: 0 auto;
+  width: 50%;
+  right: 0;
   border-width: 2px;
   border-style: solid;
   border-image: linear-gradient(to bottom, #BDBDBD, #9E9E9E);
@@ -222,8 +398,17 @@ body {
   box-shadow: none;
   background-color: rgba(255, 255, 255, 0.6);
   transition: background-color 1s; }
-  #wedding-text-container:hover {
-    background-color: white; }
+  @media screen and (min-width: 1025px) {
+    #wedding-text-container:hover {
+      background-color: white; } }
+  @media screen and (max-width: 1024px) {
+    #wedding-text-container {
+      top: 5px;
+      background: none;
+      border: none; } }
+  @media screen and (max-width: 768px) {
+    #wedding-text-container {
+      position: static; } }
 
 #wedding-section {
   display: flex;
@@ -239,17 +424,35 @@ body {
   #bridal-party > div {
     flex: 1;
     -webkit-flex: 1;
-    width: 50%; }
+    width: 50%;
+    padding: 20px 0 50px 0; }
 
 #bridesmaids {
-  background-color: #b3e5fc; }
+  background-color: rgba(114, 130, 167, 0.9); }
 
 #groomsmen-women {
-  background-color: #9e9e9e; }
-  #groomsmen-women h3 {
-    color: #fff; }
-  #groomsmen-women .section-title-alt {
-    color: #fff; }
+  background-color: rgba(254, 182, 77, 0.9); }
+
+#linh {
+  background-image: url("../images/bridesmaids/linh.png"); }
+
+#erin {
+  background-image: url("../images/bridesmaids/erin.png"); }
+
+#winnie {
+  background-image: url("../images/bridesmaids/winnie.png"); }
+
+#olivia {
+  background-image: url("../images/bridesmaids/olivia.png"); }
+
+#jenny {
+  background-image: url("../images/bridesmaids/jenny.png"); }
+
+#katie {
+  background-image: url("../images/bridesmaids/katie.png"); }
+
+#donna {
+  background-image: url("../images/groomsmen/donna.png"); }
 
 .bridal-party-profile-list {
   display: flex;
@@ -259,16 +462,99 @@ body {
   justify-content: center;
   -webkit-justify-content: center; }
   .bridal-party-profile-list > li {
-    width: 125px;
-    height: 125px;
-    border-radius: 75px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
     background-color: #fff;
-    margin: 10px; }
+    margin: 10px;
+    background-size: cover;
+    border: 2px solid #fff; }
+    @media screen and (max-width: 1024px) {
+      .bridal-party-profile-list > li {
+        width: 125px;
+        height: 125px; } }
     .bridal-party-profile-list > li:hover {
       cursor: pointer;
       opacity: .8; }
 
 #directions {
-  background-color: rgba(158, 158, 158, 0.8); }
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 40px 0;
+  text-align: center; }
+
+#mobile-menu-icon {
+  display: none;
+  cursor: pointer;
+  left: 10px;
+  top: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  background-color: #7282a7;
+  z-index: 5; }
+  @media screen and (max-width: 768px) {
+    #mobile-menu-icon {
+      position: fixed;
+      display: block; } }
+  #mobile-menu-icon span {
+    width: 28px;
+    height: 4px;
+    background: #fff;
+    border-radius: 10px;
+    display: block;
+    position: absolute;
+    left: 6px;
+    opacity: 1;
+    transform: rotate(0deg);
+    transition: .25s ease-in-out; }
+    #mobile-menu-icon span:nth-child(1) {
+      top: 6px; }
+      #mobile-menu-icon span:nth-child(1).toggle-menu {
+        transform: rotate(45deg);
+        top: 17px; }
+    #mobile-menu-icon span:nth-child(2) {
+      top: 17px; }
+      #mobile-menu-icon span:nth-child(2).toggle-menu {
+        width: 0%;
+        opacity: 0; }
+    #mobile-menu-icon span:nth-child(3) {
+      top: 28px; }
+      #mobile-menu-icon span:nth-child(3).toggle-menu {
+        transform: rotate(45deg);
+        top: 17px; }
+  #mobile-menu-icon.toggle-menu span:nth-child(1) {
+    transform: rotate(45deg);
+    top: 17px; }
+  #mobile-menu-icon.toggle-menu span:nth-child(2) {
+    width: 0%;
+    opacity: 0; }
+  #mobile-menu-icon.toggle-menu span:nth-child(3) {
+    transform: rotate(-45deg);
+    top: 17px; }
+
+#gallery-text-container {
+  top: 10%;
+  width: 400px;
+  font-size: 16px;
+  left: 50px;
+  color: #fff;
+  z-index: 2;
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #BDBDBD, #9E9E9E);
+  border-image-slice: 1;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(158, 158, 158, 0.88);
+  transition: background-color 1s;
+  text-align: center; }
+
+footer {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  font-style: italic;
+  font-size: 12px; }
+  footer a {
+    color: #666; }
 
 /*# sourceMappingURL=wedding.css.map */
