--- a/styles/css/wedding.scss
+++ b/styles/css/wedding.scss
@@ -1,27 +1,44 @@
+$full_res:1920px;
+$standard_res:1366px;
+$tablet_horizontal:1024px;
+$tablet:768px;
 html{
 	font-family:'Myriad Pro','Helvetica','sans-serif';
 	font-size:16px;
+    @media screen and (max-width:$standard_res){
+        font-size:14px;
+    }
 }
 h1{
 	font-size: 46px;
     font-family: sverigedecorated;
+    @media screen and (max-width:$standard_res){
+        font-size:35px;
+    }
+    @media screen and (max-width:$tablet_horizontal){
+        font-size:28px;
+    }
 }
 h2{
 	font-size: 34px;
     margin: 5px;
+    @media screen and (max-width:$standard_res){
+        font-size:26px;
+    }
+    @media screen and (max-width:$tablet_horizontal){
+        font-size:22px;
+    }
 }
 h3{
 	font-size: 26px;
     font-weight: 600;
     margin: 22px;
     letter-spacing: 4px;
-    color: #616161;
     font-family: sverigedecorated;
 }
 h4{
     font-size: 20px;
     margin: 4px;
-    color: #949494;
 }
 a{
 	text-decoration: none;
@@ -31,6 +48,10 @@ a{
 }
 .link{
     text-decoration:underline;
+    cursor:pointer;
+    &:hover{
+        opacity:.5;
+    }
 }
 ul,li{
 	list-style: none;
@@ -76,6 +97,74 @@ button{
 }
 body{
     background:url("../images/background.jpg");
+    &.noscroll{
+        overflow:hidden;
+    }
+}
+#modal{
+    position:fixed;
+    top:0;
+    width:100%;
+    height:100%;
+    z-index:10;
+    background-color: rgba(102, 102, 102, .6);
+    display:none;
+}
+#picture-gallery{
+    margin: auto;
+    position: absolute;
+    height: 80%;
+    width:80%;
+    background:#000;
+    top: 10%;
+    text-align:center;
+    left:0;
+    right:0;
+    min-height: 600px;
+    img{
+        height:100%;
+    }
+}
+.nav-arrow{
+    position:absolute;
+    top:50%;
+    margin-top:-25px;
+    color:#fff;
+    font-size:50px;
+    cursor:pointer;
+    &:hover{
+        opacity:.6;
+    }
+}
+#left-arrow{
+    left:20px;
+}
+#right-arrow{
+    right:20px;
+}
+#navigator{
+    position:absolute;
+    bottom:10px;
+    left:0;
+    right:0;
+    margin:0 auto;
+    ul{
+        display:flex;
+        display:-webkit-flex;
+        justify-content: center;
+        li{
+            height:15px;
+            width:15px;
+            border-radius:8px;
+            border:2px solid white;
+            cursor:pointer;
+            margin:0 4px 0 4px;
+            background-color:rgba(66, 66, 66, 0.8);
+            &.filled{
+                background-color:#7282a7;
+            }
+        }
+    }
 }
 #header{
 	background: linear-gradient(to bottom, #afafaf, #949494);
@@ -83,20 +172,50 @@ body{
     box-shadow: 0 1px 5px 1px #757575;
     padding: 10px 0;
     position: relative;
+    @media screen and (max-width:$tablet){
+        padding:0;
+    }
 }
 #header-text{
     text-align: center;
     width: 300px;
     height: 180px;
-    position: absolute;
     background: linear-gradient(to bottom, #949494 30%, rgba(128, 127, 127, .7));
-    left: 50%;
-    top: 60px;
-    margin-left: -150px;
-    border-bottom-right-radius: 200px;
-    border-bottom-left-radius: 200px;
+    position: absolute;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
     z-index: 2;
+    @media screen and (min-width:769px){
+        left: 50%;
+        top: 59px;
+        margin-left: -150px;
+        border-bottom-right-radius: 200px;
+        border-bottom-left-radius: 200px;
+    }
+    @media screen and (max-width:$standard_res){
+        width: 250px;
+        height: 150px;
+        margin-left: -125px;
+        top: 58px;
+    }
+    @media screen and (max-width:$tablet_horizontal){
+        width: 200px;
+        height: 115px;
+        margin-left: -100px;
+        top: 57px;
+    }
+    @media screen and (max-width:$tablet){
+        width:100%;
+        margin:0;
+        left:0;
+        top:0;
+        h1{
+            display:inline-block;
+            margin-bottom:5px;
+        }
+        height:auto;
+
+        background: rgba(128, 127, 127, .7);
+    }
 }
 #bottom-name{
 	margin-top:20px;
@@ -104,14 +223,13 @@ body{
 #top-nav{
 	width:100%;
 	text-transform: uppercase;
-	display:inline-flex;
-	display:-webkit-inline-flex;
 	li{
 		padding: 12px;
 		flex:1;
 		-webkit-flex:1;
 		text-align: center;
 		a{
+            display:block;
 			color:#f5f5f5;
             transition: all .5s;
             -webkit-transition: all .5s;
@@ -121,11 +239,47 @@ body{
             }
 		}
 	}
+    &.scroll{
+        background-color: rgba(66, 66, 66, .8);
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 5;
+        padding: 10px 0 0 10px;
+    }
+    @media screen and (min-width:769px){
+        display:inline-flex !important;
+        display:-webkit-inline-flex !important;
+    }
+    @media screen and (max-width:$tablet){
+        display:none;
+        z-index:3;
+        position:fixed;
+        top:0;
+        li{
+            background-color: rgba(158,158,158,1);
+            border-bottom:1px solid #fff;
+            cursor:pointer;
+            padding:0;
+            &:hover{
+                background-color: #bdbdbd;
+                color:#7282a7;
+            }
+            a{
+                padding:12px;
+            }
+        }
+    }
 }
 #page-wrapper{
 	width:80%;
+    min-width:1536px;
 	margin: 0 auto;
 	box-shadow: 0 0 10px 2px #757575;
+    @media screen and (max-width:$standard_res){
+        width:100%;
+        min-width:600px;
+    }
 }
 
 #page-content{
@@ -136,7 +290,6 @@ body{
 }
 .section{
 	position: relative;
-    background-color:#fff;
     font-size: 0;
     border-bottom: 3px solid rgb(114, 130, 167);
 	img.section-image{
@@ -149,11 +302,19 @@ body{
     text-shadow: 1px 1px #000;
     text-align: center;
     display:block;
+    @media screen and (max-width:$standard_res){
+        font-size:125px;
+    }
+    @media screen and (max-width:$tablet_horizontal){
+        font-size:75px;
+        margin: -10px 0 -15px;
+    }
+
 }
 .section-title-alt{
-    padding: 40px 0 20px 0;
-    color:#616161;
-    font-size: 50px;
+    padding: 30px 0 15px 0;
+    color:#000;
+    font-size: 45px;
     font-family: sverigedecorated;
     text-align: center;
     display:block;
@@ -164,6 +325,18 @@ body{
     z-index: 2;
     box-shadow: 0px 1px 6px 1px #757575;
     font-size:16px;
+    text-align: justify;
+    @media screen and (max-width:$tablet_horizontal){
+        font-size:14px;
+        padding:0 20px 10px 20px;
+    }
+    @media screen and (max-width:$tablet){
+        left: 0 !important;
+        top: 0 !important;
+        bottom: auto !important;
+        width: 100% !important;
+        margin-left: 0 !important;
+    }
 }
 #story-text-container{
     width: 30%;
@@ -178,8 +351,15 @@ body{
     box-shadow: 0 2px 10px rgba(0,0,0,.5);
     background-color: rgba(158, 158, 158, 0.88);
     transition: background-color 1s;
-    &:hover{
+    @media screen and (min-width:1025px){
+      &:hover{
         background-color: rgba(158, 158, 158, 1);
+        }
+    }
+    @media screen and (max-width:$tablet_horizontal){
+        top:20px;
+        right:2%;
+        width:40%;
     }
 }
 #rsvp-text-container{
@@ -195,14 +375,16 @@ body{
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     background-color: rgba(114, 130, 167, 0.89);
     transition: background-color 1s;
-    &:hover{
+    text-align:center;
+    @media screen and (min-width:1025px){
+      &:hover{
         background-color: rgba(114, 130, 167, 1);
+        }
     }
 }
 #engagement-text-container{
     width: 600px;
     bottom: 200px;
-    height: 375px;
     color: #fff;
     left: 200px;
     z-index: 2;
@@ -213,8 +395,14 @@ body{
     box-shadow: 0 2px 10px rgba(0,0,0,.5);
     background-color: rgba(158, 158, 158, .8);
     transition: background-color 1s;
-    &:hover{
+    @media screen and (min-width:1025px){
+      &:hover{
         background-color: rgba(158, 158, 158, 1);
+        }
+    }
+    @media screen and (max-width:$tablet_horizontal){
+        left:50%;
+        margin-left:-300px;
     }
 }
 #wedding{
@@ -222,11 +410,20 @@ body{
 	.picture-wrapper{
 		text-align: center;
 	}
+    background-image:url('../images/wedding.jpg');
+    background-size: cover;
+    min-height:900px;
+    @media screen and (max-width:$tablet){
+        min-height:562px;
+    }
 }
 #wedding-text-container{
-    top: 250px;
-    color: #fff;
-    left: calc(50% - 300px);
+    top: 10%;
+    color:#000;
+    left: 0;
+    margin: 0 auto;
+    width: 50%;
+    right: 0;
     border-width: 2px;
     border-style: solid;
     border-image: linear-gradient(to bottom,#BDBDBD,#9E9E9E);
@@ -235,8 +432,18 @@ body{
     box-shadow: none;
     background-color:rgba(255,255,255,.6);
     transition: background-color 1s;
-    &:hover{
-        background-color: rgba(255, 255, 255, 1);
+    @media screen and (min-width:1025px){
+        &:hover{
+            background-color: rgba(255, 255, 255, 1);
+        }
+    }
+    @media screen and (max-width:$tablet_horizontal){
+        top:5px;
+        background:none;
+        border:none;
+    }
+    @media screen and (max-width:$tablet){
+        position:static;
     }
 }
 #wedding-section{
@@ -255,19 +462,35 @@ body{
         flex:1;
         -webkit-flex:1;
         width:50%;
+        padding: 20px 0 50px 0;
     }
 }
 #bridesmaids{
-    background-color:#b3e5fc;
+    background-color:rgba(114, 130, 167, .9);
 }
 #groomsmen-women{
-    h3{
-        color:#fff;
-    }
-    .section-title-alt{
-        color:#fff;
-    }
-    background-color:#9e9e9e;
+    background-color:rgba(254, 182, 77, .9);
+}
+#linh{
+    background-image:url('../images/bridesmaids/linh.png');
+}
+#erin{
+    background-image:url('../images/bridesmaids/erin.png');
+}
+#winnie{
+    background-image:url('../images/bridesmaids/winnie.png');
+}
+#olivia{
+    background-image:url('../images/bridesmaids/olivia.png');
+}
+#jenny{
+    background-image:url('../images/bridesmaids/jenny.png');
+}
+#katie{
+    background-image:url('../images/bridesmaids/katie.png');
+}
+#donna{
+    background-image:url('../images/groomsmen/donna.png');
 }
 .bridal-party-profile-list{
     display:flex;
@@ -277,11 +500,17 @@ body{
     justify-content: center;
     -webkit-justify-content: center;
     >li{
-        width: 125px;
-        height: 125px;
-        border-radius:75px;
+        width: 200px;
+        height: 200px;
+        border-radius:100px;
         background-color:#fff;
         margin:10px;
+        background-size:cover;
+        border: 2px solid #fff;
+        @media screen and (max-width:$tablet_horizontal){
+            width: 125px;
+            height: 125px;
+        }
         &:hover{
             cursor: pointer;
             opacity:.8;
@@ -289,5 +518,98 @@ body{
     }
 }
 #directions{
-    background-color: rgba(158, 158, 158, .8);
+    background-color: rgba(255, 255, 255, .8);
+    padding: 40px 0;
+    text-align: center;
+}
+#mobile-menu-icon{
+    @media screen and (max-width: $tablet){
+        position:fixed;
+        display:block;
+    }
+    display:none;
+    cursor:pointer;
+    left: 10px;
+    top: 10px;
+    width:40px;
+    height:40px;
+    border-radius:5px;
+    background-color: #7282a7;
+    z-index:5;
+    span{
+        width: 28px;
+        height: 4px;
+        background: #fff;
+        border-radius: 10px;
+        display: block;
+        position:absolute;
+        left:6px;
+        opacity:1;
+        transform: rotate(0deg);
+        transition: .25s ease-in-out;
+        &:nth-child(1){
+            top: 6px;
+            &.toggle-menu{
+                transform: rotate(45deg);
+                top: 17px;
+            }
+        }
+        &:nth-child(2){
+            top: 17px;
+            &.toggle-menu{
+                width:0%;
+                opacity:0;
+            }
+        }
+        &:nth-child(3){
+            top: 28px;
+            &.toggle-menu{
+                transform: rotate(45deg);
+                top: 17px;
+            }
+        }
+    }
+    &.toggle-menu{
+        span{
+             &:nth-child(1){
+                transform: rotate(45deg);
+                top: 17px;
+            }
+             &:nth-child(2){
+            width:0%;
+            opacity:0;
+            }
+            &:nth-child(3){
+                transform: rotate(-45deg);
+                top: 17px;
+            }
+        }
+       
+    }
+}
+#gallery-text-container{
+    top: 10%;
+    width: 400px;
+    font-size: 16px;
+    left:50px;
+    color:#fff;
+    z-index: 2;
+    border-width: 2px;
+    border-style: solid;
+    border-image: linear-gradient(to bottom, #BDBDBD, #9E9E9E);
+    border-image-slice: 1;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    background-color: rgba(158, 158, 158, 0.88);
+    transition: background-color 1s;
+    text-align:center;
+}
+footer{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    font-style: italic;
+    font-size: 12px;
+    a{
+        color:#666;
+    }
 }
