--- a/styles/css/wedding.scss
+++ b/styles/css/wedding.scss
@@ -42,9 +42,11 @@ h4{
     color: #212121;
     text-transform: uppercase;
     font-style: normal;
+    text-align:center;
 }
 a{
 	text-decoration: none;
+    color:inherit;
     &:visited{
         color:inherit;
     }
