Further optimized images, added new ones, fixed typos, css

--- a/styles/css/wedding.css
+++ b/styles/css/wedding.css
@@ -57,7 +57,8 @@ ul, li {
 
 .superscript {
   vertical-align: super;
-  font-size: 12px; }
+  font-size: 12px;
+  text-transform: none; }
 
 p {
   margin: 5px 0;
