changed name and pic

--- a/styles/css/wedding.css
+++ b/styles/css/wedding.css
@@ -469,8 +469,8 @@ body {
 #erin {
   background-image: url("../images/bridesmaids/erin.png"); }
 
-#winnie {
-  background-image: url("../images/bridesmaids/winnie.png"); }
+#wennie {
+  background-image: url("../images/bridesmaids/wennie.png"); }
 
 #olivia {
   background-image: url("../images/bridesmaids/olivia.png"); }
