--- a/styles/css/wedding.scss
+++ b/styles/css/wedding.scss
@@ -508,8 +508,8 @@ body{
 #erin{
     background-image:url('../images/bridesmaids/erin.png');
 }
-#winnie{
-    background-image:url('../images/bridesmaids/winnie.png');
+#wennie{
+    background-image:url('../images/bridesmaids/wennie.png');
 }
 #olivia{
     background-image:url('../images/bridesmaids/olivia.png');
