--- a/styles/css/wedding.css
+++ b/styles/css/wedding.css
@@ -17,7 +17,7 @@ h1 {
 
 h2 {
   font-size: 34px;
-  margin: 5px; }
+  padding: 5px; }
   @media screen and (max-width: 1366px) {
     h2 {
       font-size: 26px; } }
@@ -216,11 +216,10 @@ body {
   @media screen and (max-width: 768px) {
     #header-text {
       width: 100%;
-      margin: 0;
-      left: 0;
-      top: 0;
+      margin: 0 0 2px 0;
+      position: static;
       height: auto;
-      background: rgba(128, 127, 127, 0.7); }
+      background: linear-gradient(to bottom, #949494 30%, #807f7f); }
       #header-text h1 {
         display: inline-block;
         margin-bottom: 5px; } }
@@ -265,12 +264,13 @@ body {
         background-color: #9e9e9e;
         border-bottom: 1px solid #fff;
         cursor: pointer;
-        padding: 0; }
+        padding: 0;
+        font-size: 20px; }
         #top-nav li:hover {
           background-color: #bdbdbd;
           color: #7282a7; }
         #top-nav li a {
-          padding: 12px; } }
+          padding: 12px 0; } }
 
 #page-wrapper {
   width: 80%;
@@ -280,7 +280,7 @@ body {
   @media screen and (max-width: 1366px) {
     #page-wrapper {
       width: 100%;
-      min-width: 600px; } }
+      min-width: 360px; } }
 
 #page-content {
   margin: 0 0 20px 0; }
@@ -316,6 +316,9 @@ body {
   font-family: sverigedecorated;
   text-align: center;
   display: block; }
+  @media screen and (max-width: 768px) {
+    .section-title-alt {
+      font-size: 30px; } }
 
 .section-container {
   position: absolute;
@@ -330,11 +333,9 @@ body {
       padding: 0 20px 10px 20px; } }
   @media screen and (max-width: 768px) {
     .section-container {
-      left: 0 !important;
-      top: 0 !important;
-      bottom: auto !important;
       width: 100% !important;
-      margin-left: 0 !important; } }
+      margin-left: 0 !important;
+      position: static; } }
 
 #story-text-container {
   width: 30%;
@@ -399,7 +400,7 @@ body {
 
 #wedding {
   text-align: center;
-  background-image: url("../images/wedding.jpg");
+  background-image: url("../images/1024/wedding.jpg");
   background-size: cover;
   min-height: 900px; }
   #wedding .picture-wrapper {
@@ -611,6 +612,7 @@ body {
 
 footer {
   width: 80%;
+  min-width: 360px;
   margin: auto;
   text-align: center;
   font-style: italic;
