Adding Winston Bio

--- a/styles/css/wedding.css
+++ b/styles/css/wedding.css
@@ -482,6 +482,9 @@ body {
 #katie {
   background-image: url("../images/bridesmaids/katie.png"); }
 
+#winston {
+  background-image: url("../images/groomsmen/winston.png"); }
+
 #donna {
   background-image: url("../images/groomsmen/donna.png"); }
 
