--- a/styles/css/wedding.scss
+++ b/styles/css/wedding.scss
@@ -520,6 +520,9 @@ body{
 #katie{
     background-image:url('../images/bridesmaids/katie.png');
 }
+#winston{
+    background-image:url('../images/groomsmen/winston.png');
+}
 #donna{
     background-image:url('../images/groomsmen/donna.png');
 }
