--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -526,6 +526,13 @@ body{
 #donna{
     background-image:url('../images/groomsmen/donna.png');
 }
+#aaron{
+    background-image:url('../images/groomsmen/aaron.png');
+}
+
+#brian{
+    background-image:url('../images/groomsmen/brian.png');
+}
 .bridal-party-profile-list{
     display:flex;
     display:-webkit-flex;
