Additional church wedding changes + charles profile

--- a/app/styles/css/wedding.css
+++ b/app/styles/css/wedding.css
@@ -491,6 +491,9 @@ body {
 #aaron {
   background-image: url("../images/groomsmen/aaron.png"); }
 
+#charles {
+  background-image: url("../images/groomsmen/charles.png"); }
+
 #brian {
   background-image: url("../images/groomsmen/brian.png"); }
 
