--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -58,6 +58,9 @@ a{
         opacity:.5;
     }
 }
+.italic{
+    font-style:italic;
+}
 ul,li{
 	list-style: none;
 }
@@ -80,6 +83,9 @@ p{
 }
 .align-center{
     text-align:center;
+}
+.justify{
+    text-align:justify;
 }
 .bold{
 	font-weight: bold;
@@ -678,6 +684,19 @@ body{
     background-color: rgba(158, 158, 158, 0.88);
     transition: background-color 1s;
     text-align:center;
+}
+#registry-text-container{
+   top: 100px;
+    width: 600px;
+    left: calc(50% - 300px);
+    box-shadow: none;
+    background-color:rgba(255,255,255,.6);
+    transition: background-color 1s;
+     @media screen and (min-width:1025px){
+        &:hover{
+            background-color: rgba(255, 255, 255, .8);
+        }
+    }
 }
 footer{
     width: 80%;
