--- a/app/styles/css/churchwedding.scss
+++ b/app/styles/css/churchwedding.scss
@@ -27,9 +27,16 @@
     		width:75%;
     	}
     	&:after{
-    		content: url('../images/churchwedding/ceremony_divider.png');
-    		display:block;
-    		text-align:center;
+    		content: "";
+		    display: block;
+		    text-align: center;
+		    width: 100%;
+		    height: 98px;
+		    background-size: 100% 100%;
+		    background-image: url(../images/churchwedding/ceremony_divider.png);
+		    @media screen and (max-width:468px){
+     			height:75px;
+     		}
     	}
     }
 }
