--- a/app/styles/css/churchwedding.scss
+++ b/app/styles/css/churchwedding.scss
@@ -1,4 +1,6 @@
-
+$standard_res:1366px;
+$tablet_horizontal:1024px;
+$tablet:768px;
 #church-wedding-body{
     background:url("../images/churchwedding/stamp_background.png");
 }
@@ -47,10 +49,23 @@
     box-shadow: none;
     background-color:rgba(255,255,255,.6);
     transition: background-color 1s;
-     @media screen and (min-width:1025px){
+    @media screen and (min-width:1025px){
         &:hover{
             background-color: rgba(255, 255, 255, .8);
         }
+    }
+    @media screen and (max-width:$standard_res){
+    	top:30px;
+    	width:500px;
+    	left: calc(50% - 250px);
+    }
+    @media screen and (max-width:$tablet_horizontal){
+    	.section-image{
+    		display:none;
+    	}
+    }
+     @media screen and (max-width:$tablet){
+    	background:rgba(158, 158, 158, 0.95);
     }
 }
 #couple-shower-text-container{
@@ -61,9 +76,22 @@
     box-shadow: none;box-shadow: none;
     background-color:rgba(255,255,255,.6);
     transition: background-color 1s;
-     @media screen and (min-width:1025px){
+    @media screen and (min-width:1025px){
         &:hover{
             background-color: rgba(255, 255, 255, .8);
         }
+    }
+     @media screen and (max-width:$standard_res){
+    	top:40px;
+    	width:600px;
+    	left: calc(50% - 300px);
+    }
+    @media screen and (max-width:$tablet_horizontal){
+    	.section-image{
+    		display:none;
+    	}
+    }
+     @media screen and (max-width:$tablet){
+    	background:rgba(158, 158, 158, 0.95);
     }
 }
