--- a/app/styles/css/wedding.css
+++ b/app/styles/css/wedding.css
@@ -209,9 +209,9 @@ body {
       top: 58px; } }
   @media screen and (max-width: 1024px) {
     #header-text {
-      width: 200px;
-      height: 115px;
-      margin-left: -100px;
+      width: 210px;
+      height: 130px;
+      margin-left: -105px;
       top: 57px; } }
   @media screen and (max-width: 768px) {
     #header-text {
@@ -335,7 +335,8 @@ body {
     .section-container {
       width: 100% !important;
       margin-left: 0 !important;
-      position: static; } }
+      position: static;
+      color: #fff; } }
 
 #story-text-container {
   width: 30%;
@@ -496,6 +497,9 @@ body {
 
 #brian {
   background-image: url("../images/groomsmen/brian.png"); }
+
+#ritchie {
+  background-image: url("../images/groomsmen/ritchie.png"); }
 
 .bridal-party-profile-list {
   display: flex;
