--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -118,6 +118,7 @@ body{
     display:none;
 }
 #picture-gallery{
+    display:none;
     margin: auto;
     position: absolute;
     height: 80%;
@@ -409,6 +410,20 @@ body{
         background-color: rgba(114, 130, 167, 1);
         }
     }
+}
+#rsvp-form-wrapper{
+    display:none;
+    margin: auto;
+    position: absolute;
+    min-height: 400px;
+    width: 40%;
+    min-width: 700px;
+    text-align: center;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    top: 25%;   
+    border-radius: 10px;
 }
 #engagement-text-container{
     width: 600px;
