--- a/app/styles/css/wedding.css
+++ b/app/styles/css/wedding.css
@@ -30,10 +30,16 @@ h3 {
   font-family: mademoisellecamille; }
 
 h4 {
+  font-size: 22px;
+  margin: 8px;
+  color: #212121;
+  text-transform: uppercase;
+  font-style: normal;
+  text-align: center; }
+
+h5 {
   font-size: 16px;
   margin: 8px;
-  font-weight: 600;
-  color: #212121;
   text-transform: uppercase;
   font-style: normal;
   text-align: center; }
@@ -696,7 +702,7 @@ body {
   padding: 60px 0; }
 
 #other-events-container {
-  margin: 0 auto;
+  margin: 0px auto;
   position: static;
   padding: 15px;
   width: 800px;
@@ -708,14 +714,13 @@ body {
   border-image-slice: 1;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(124, 139, 172, 0.7);
-  transition: background-color 1s;
-  text-align: center; }
+  transition: background-color 1s; }
   #other-events-container .event {
     margin: 0 0 20px 0; }
     #other-events-container .event h4 {
       color: #fff; }
     #other-events-container .event p {
-      margin: 0 auto;
+      margin: 8px auto;
       width: 75%; }
     #other-events-container .event:after {
       content: "";
