--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -450,7 +450,11 @@ body{
     border-image-slice: 1;
     padding:0 10%;
     height: calc(100% - 26px);
-
+    overflow-y: auto;
+}
+.rsvp-error{
+    display:none;
+    color:#f44336;
 }
 #rsvp-heart-img{
     margin: 15px 0;
@@ -459,8 +463,11 @@ body{
     font-size:18px;
     display: flex;
     text-align:center;
+    >form {
+        width:100%;
+    }
     > form > * {
-        margin: 8px 0;
+        margin: 10px 0;
     }
     .rsvp-input{
         width: 100%;
@@ -480,11 +487,20 @@ body{
         }
     }
     .rsvp-radio-button-wrapper{
-        font-size:12px;
+        font-size:14px;
+        display:flex;
+        span{
+            flex:1;
+            margin: 5px 0;
+        }
     }
 }
 #rsvp-response-form, #rsvp-mad-lib-form{
     display:none;
+}
+#rsvp-thank-you-wrapper{
+    display:none;
+    width:100%;
 }
 .rsvp-guest-list{
     font-family:greatvibes;
