--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -498,6 +498,9 @@ body{
 #rsvp-response-form, #rsvp-mad-lib-form{
     display:none;
 }
+#rsvp-diet-other-textfield{
+    display:none;
+}
 #rsvp-thank-you-wrapper{
     display:none;
     width:100%;
