--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -76,6 +76,9 @@ ul,li{
     font-size:12px;
     text-transform:none;
 }
+.hidden{
+    display:none;
+}
 p{
 	margin: 5px 0;
     line-height: 1.3;
@@ -488,7 +491,6 @@ body{
         margin: 10px 0;
     }
     .rsvp-input{
-        width: 100%;
         border-radius: 5px;
         padding: 10px 5px;
         border: 2px solid #c2c4c9;
@@ -504,6 +506,12 @@ body{
             font-size:16px;
         }
     }
+    .rsvp-full-input{
+        width: 100%;
+    }
+    .rsvp-half-input{
+        width: 45%;
+    }
     .rsvp-radio-button-wrapper{
         font-size:14px;
         display:flex;
@@ -513,14 +521,7 @@ body{
         }
     }
 }
-#rsvp-response-form, #rsvp-mad-lib-form{
-    display:none;
-}
-#rsvp-diet-other-textfield{
-    display:none;
-}
 #rsvp-thank-you-wrapper{
-    display:none;
     width:100%;
 }
 .rsvp-guest-list{
