initial accomodations section added

--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -831,6 +831,17 @@ body{
     min-height:600px;
     padding:60px 0;
 }
+#accomodations{
+    background-color: rgba(245, 245, 245, 0.7);
+    min-height:600px;
+    padding:60px 0;
+}
+#accomodations-text-container{
+    width: 50%;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+}
 #other-events-container{
     margin:0px auto;
     position:static;
